<resources>
    <string name="app_name">Spotifiubyfy.0.1</string>
    <string name="registration_username">Enter a username</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_log_in">Log In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_edit">Edit</string>
    <string name="button_logOut">Log Out</string>
    <string name="dont_have_account">Don\'t have an account? Just create one!</string>
    <string name="registration_password">Enter a secure password</string>
    <string name="LogoApp" />
    <string name="registration_email">Enter your email</string>
    <string name="Popup_content">Descriptive Message</string>
    <string name="Popup_title">Error</string>
    <string name="Popup_button_text">OK</string>
    <string name="Email_example">example99@domain.com</string>
    <string name="Username_restriction1">No special characters nor white spaces allowed</string>
    <string name="Username_restriction2">Between 5 and 30 characters</string>
    <string name="Password_restrictions">At least 6 characters, 1 number and 1 letter</string>
    <string name="LogIn_username">Enter your username</string>
    <string name="logIn_password">Enter your password</string>
    <string name="token_key">token_key</string>
    <string name="username">Username: </string>
    <string name="search"> Songs, artists, albums, playlists...</string>
    <string name="email">Email: </string>
    <string name="subscription">Active subscription: </string>
    <string name="profile">Profile: </string>
    <string name="example">TextSomething </string>
    <string name="changePassword">Change Password: </string>
    <string name="oldPassword">Enter your old password: </string>
    <string name="newPassword">Enter your new password: </string>
    <string name="changePasswordButton">Change Password </string>
    <string name="createAlbum">Create album </string>
    <string name="createSong">Create Song </string>
    <string name="createPlaylist">Create playlist </string>
    <string name="albumDescription">Description:</string>
    <string name="album_name">Album name:</string>
    <string name="upload_song_title">Upload song:</string>
    <string name="song_name_field">Song name</string>
    <string name="upload_button">Upload</string>
    <string name="AlbumGenreHint">Genre: </string>
    <string name="enter_album_cover_image_path">Enter album cover image path:</string>
    <string name="song_description_hint">Song description:</string>
    <string name="song_path_hint">Song path:</string>
    <string name="finish_song_creation_button">Finish</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="album_art_alt">Album art</string>
    <string name="action_playback_page">Go to playback</string>
    <string name="message">Message...</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="playlist_media">Playlist Media</string>
    <string name="defaultImage">https://i.pinimg.com/originals/33/58/0c/33580cd023504630a4ea63fe0a1650f6.jpg</string>
    <string name="artistName">"Artist name: "</string>
    <string name="title_activity_location_selection">LocationSelection</string>
    <string name="playlist">Playlists</string>
    <string name="album_rec_geo">Albums near you</string>
    <string name="album_rec_genre">Based on your preferences</string>
    <string name="artists_rec_geo">Artists near you</string>
</resources>