<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/userInformationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/usernameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="9dp"
                android:text="@string/artistName"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:autofillHints=""
                android:backgroundTint="#FFFFFF"
                android:hint="@string/registration_username"
                android:inputType="text"
                android:text="@string/example"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/editArtistNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="1dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#1DB954"
                android:text="@string/button_edit" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="28dp"
                android:layout_gravity="center_vertical"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="4dp"
                android:autofillHints=""
                android:backgroundTint="#FFFFFF"
                android:hint="@string/registration_email"
                android:inputType="textEmailAddress"
                android:text="@string/example"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/editEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="24dp"
                android:backgroundTint="#1DB954"
                android:text="@string/button_edit" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/susbscriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="27dp"
                android:text="@string/subscription"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:text="@string/example"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/subscriptionBtn"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#1DB954"
            android:text="Change Subscription" />

        <Button
            android:id="@+id/changePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#1DB954"
            android:text="Change profile picture" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1DB954"
                android:onClick="editLocation"
                android:layout_marginLeft="24dp"
                android:text="EDIT LOCATION"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1DB954"
                android:onClick="editPreferences"
                android:layout_marginLeft="24dp"
                android:text="EDIT PREFERENCES"
                android:layout_gravity="center_horizontal"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#1DB954"
            android:text="@string/button_logOut" />

        <TextView
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="37dp"
            android:text="@string/changePassword"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#56FFFFFF" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#56FFFFFF" />

        <TextView
            android:id="@+id/password_restictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Password_restrictions"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#1DB954"
            android:text="@string/changePasswordButton"
            android:textColor="#FFFFFF" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>