<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".AlbumCreationPage">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Select image"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/album_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#56FFFFFF" />

    <EditText
        android:id="@+id/albumDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/albumDescription"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#56FFFFFF" />

    <EditText
        android:id="@+id/albumGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/AlbumGenreHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#56FFFFFF" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1.5"
        app:boxBackgroundColor="#2F2F2F">

        <AutoCompleteTextView
            android:id="@+id/albumSuscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/black"
            android:focusedByDefault="true"
            android:inputType="none"
            android:text="free"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createAlbumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/createAlbum" />

</androidx.appcompat.widget.LinearLayoutCompat>